Первая лабораторная работа. Фиксы

--- a/Confectionery/Confectionery/nlog.config
+++ b/Confectionery/Confectionery/nlog.config
@@ -5,7 +5,7 @@
         autoReload="true" internalLogLevel="Info">
 
 		<targets>
-			<target xsi:type="File" name="tofile" fileName="${basedir}/carlog-${shortdate}.log" />
+			<target xsi:type="File" name="tofile" fileName="${basedir}/${shortdate}.log" />
 		</targets>
 
 		<rules>
