--- a/Confectionery/Confectionery/Confectionery.csproj
+++ b/Confectionery/Confectionery/Confectionery.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\ConfectioneryBusinessLogic\ConfectioneryBusinessLogic.csproj" />
     <ProjectReference Include="..\ConfectioneryContracts\ConfectioneryContracts.csproj" />
     <ProjectReference Include="..\ConfectioneryDataModels\ConfectioneryDataModels.csproj" />
+    <ProjectReference Include="..\ConfectioneryFileImplements\ConfectioneryFileImplement.csproj" />
     <ProjectReference Include="..\ConfectioneryListImplement\ConfectioneryListImplement.csproj" />
   </ItemGroup>
 
