--- a/Confectionery/Confectionery/Confectionery.csproj
+++ b/Confectionery/Confectionery/Confectionery.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
@@ -30,6 +34,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ConfectioneryBusinessLogic\ConfectioneryBusinessLogic.csproj" />
     <ProjectReference Include="..\ConfectioneryContracts\ConfectioneryContracts.csproj" />
+    <ProjectReference Include="..\ConfectioneryDataBaseImplement\ConfectioneryDataBaseImplement.csproj" />
     <ProjectReference Include="..\ConfectioneryDataModels\ConfectioneryDataModels.csproj" />
     <ProjectReference Include="..\ConfectioneryFileImplements\ConfectioneryFileImplement.csproj" />
     <ProjectReference Include="..\ConfectioneryListImplement\ConfectioneryListImplement.csproj" />
