--- a/Confectionery/ConfectioneryBusinessLogic/ConfectioneryBusinessLogic.csproj
+++ b/Confectionery/ConfectioneryBusinessLogic/ConfectioneryBusinessLogic.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.19.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="PdfSharp.MigraDoc.Standard" Version="1.51.15" />
   </ItemGroup>
 
   <ItemGroup>
