--- a/Confectionery/Confectionery/App.config
+++ b/Confectionery/Confectionery/App.config
@@ -6,6 +6,6 @@
 		<add key="PopHost" value="pop.gmail.com" />
 		<add key="PopPort" value="995" />
 		<add key="MailLogin" value="rpplab7@gmail.com" />
-		<add key="MailPassword" value="rpplab7password" />
+		<add key="MailPassword" value="edjc dmsf pqne gxwy" />
 	</appSettings>
 </configuration>
