--- a/Confectionery/ConfectioneryRestApi/ConfectioneryRestApi.csproj
+++ b/Confectionery/ConfectioneryRestApi/ConfectioneryRestApi.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\ConfectioneryDataBaseImplement\ConfectioneryDataBaseImplement.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
