--- a/Confectionery/ConfectioneryRestApi/appsettings.json
+++ b/Confectionery/ConfectioneryRestApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpClientHost": "smtp.gmail.com",
+  "SmtpClientPort": "587",
+  "PopHost": "pop.gmail.com",
+  "PopPort": "995",
+  "MailLogin": "rpplab7@gmail.com",
+  "MailPassword": "edjc dmsf pqne gxwy"
 }
