--- a/Confectionery/ConfectioneryContracts/ConfectioneryContracts.csproj
+++ b/Confectionery/ConfectioneryContracts/ConfectioneryContracts.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Unity" Version="5.11.10" />
+    <PackageReference Include="Unity.Microsoft.Logging" Version="5.11.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ConfectioneryDataModels\ConfectioneryDataModels.csproj" />
   </ItemGroup>
 
