--- a/Confectionery/ConfectioneryDataBaseImplement/ConfectioneryDataBaseImplement.csproj
+++ b/Confectionery/ConfectioneryDataBaseImplement/ConfectioneryDataBaseImplement.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\ConfectioneryDataModels\ConfectioneryDataModels.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy /Y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)ImplementationExtensions\*.dll&quot;" />
+  </Target>
+
 </Project>
